add event broadcast via long polling
